--- a/app/src/main/res/layout/fragment_covid_global.xml
+++ b/app/src/main/res/layout/fragment_covid_global.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools ="http://schemas.android.com/tools"
     xmlns:app ="http://schemas.android.com/apk/res-auto"
@@ -13,23 +12,20 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:layout_margin="5dp"
             android:id="@+id/jci"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Total Covid di Provinsi Indonesia"
+            android:text="Total Covid di Dunia"
             android:textSize="20sp"
             android:layout_marginBottom="16dp"
             android:gravity="center_horizontal"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_below="@id/jci"
-            android:id="@+id/listCovidProvinsi"
+            android:id="@+id/listCovidGlobal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:layout_marginTop="16dp"/>
-
+            android:scrollbars="vertical"/>
     </RelativeLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
